Unreleased

* Optimized AES-GCM for AVX512-VAES x86 implementation.

* Optimized MD5 and SM3 for aarch64.

* New optimized version of AES-CBC and AES-XTS for aarch64.

* Optimized multi-hash SHA1-Murmur for aarch64.

* Optimized multi-hash SHA1 for aarch64.

* Added ACVP test applications for AES-CBC, AES-GCM, AES-XTS and SHA1/256/512.

v2.24

* New optimized version of AES-CBC decode

* New AVX2, 8 lane version of multi-buffer SM3

* Added support for big-endian architectures

v2.23

* New optimized versions of block ciphers AES-GCM and AES-XTS.

* New optimized versions of multi-buffer SM3 hashing.  Removed experimental
  status.

v2.22

* New multi-buffer SM3 functions. Experimental base functions only.

* New multi-arch support.

v2.21

* Multi-buffer hash performance improvement for Intel(R) Atom(tm) processors.
  New by-2 shani versions for multi-buffer sha1 & sha256.

* New base functions for multi-buffer hashes.
  md5_mb, sha1_mb, sha256_mb, sha512_mb.

v2.20

* New functions
  - Non-temporal versions of aes_gcm added.

* Multi-buffer hash improvement
  - Increase max length of hash in {sha1,sha256,sha512,md5}_mb to > 4GB.

v2.19

* Multi-buffer hash (sha1_mb, sha256_mb)

  - Choose fast single buffer routine to do flush operation if lanes aren't full.

  - Add SHA-NI support for Goldmont and Cannonlake.

* AES-GCM interface updates.

  - New interface separates the expanded keys and other context into two
  structures.  The old interface is maintained for backward compatibility.

  - User no longer has to append the GCM_IV_END_MARK manually to then end of iv
  as this is now done automatically.  This update should also improve performance
  of small packets.

* Rolling hash is released.

v2.18

* New multi-hash SHA256-based version.

v2.16

* Split lib from non-crypto functions.

v2.15

* Multi-buffer hash updates.  New AVX512 versions for multi-buffer SHA1, SHA256,
  SHA512, MD5 and SHA1+murmur3_x64_128 stitched.
