@@ -37,7 +37,6 @@ Building ISA-L
 
 x86_64:
 * Assembler: nasm v2.11.01 or later (nasm v2.13 or better suggested for building in AVX512 support)
-  or yasm version 1.2.0 or later.
 * Compiler: gcc, clang, icc or VC compiler.
 * Make: GNU 'make' or 'nmake' (Windows).
 * Optional: Building with autotools requires autoconf/automake packages.
