@@ -19,7 +19,7 @@ Makefile.nmake tst.nmake: FORCE
 	@echo ''			>> $@
 	@echo ''			>> $@
 	@echo 'INCLUDES  = $(INCLUDE)'	>> $@
-	@echo '# Modern asm feature level, consider upgrading nasm/yasm before decreasing feature_level'	>> $@
+	@echo '# Modern asm feature level, consider upgrading nasm before decreasing feature_level'	>> $@
 	@echo 'FEAT_FLAGS = -DHAVE_AS_KNOWS_AVX512 -DAS_FEATURE_LEVEL=10 -DHAVE_AS_KNOWS_SHANI'	>> $@
 	@echo 'CFLAGS_REL = -O2 -DNDEBUG /Z7 /Gy'		>> $@
 	@echo 'CFLAGS_DBG = -Od -DDEBUG /Z7'			>> $@
